# mnemovox

./: .aider.conf.yml  .dockerignore  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  Makefile  README.md  config.yaml  docker-compose.yml  main.py  package-lock.json  package.json  playwright.config.py  prompt_plan.md  pyproject.toml  pytest.ini  spec.md  todo.md  watcher.py
.github/workflows/: ci.yml
docs/: TODO.md  spec.md
docs/LLM/: INSTRUCTIONS.md  TODO.md
docs/LLM/COMPLETED/: 001-add-search-button-to-main-page.md  002-create-upload-frontend-endpoint.md  (+3 more)
docs/design/: refactor.md
migrations/: migration_002_add_overrides.py
mnemovox/: audio_utils.py  db.py  pipeline.py
src/audio_manager/: __init__.py  app.py  audio_utils.py  config.py  db.py  pipeline.py  transcriber.py  watcher.py
static/js/: retranscribe.js  search.js  settings.js  transcript.js  waveform.js
templates/: base.html  detail.html  list.html  recording_detail.html  recordings_list.html  search.html  settings.html  upload.html
tests/: test_api.py  test_api_detail.py  test_api_list.py  test_api_retranscribe.py  test_api_retranscribe_override.py  test_api_search.py  test_api_settings.py  test_api_upload.py  test_audio_playback.py  test_audio_utils.py  test_background_task.py  test_background_task_integration.py  test_browser_e2e.py  test_config.py  test_config_phase2.py  test_config_save.py  test_db.py  test_db_fts.py  test_db_migration.py  test_debug_current_issue.py  test_delete_integration.py  test_end_to_end_upload_search.py  test_excerpt_highlighting.py  test_fts_indexing_requirement.py  test_ingest.py  test_page_detail.py  test_page_detail_overrides.py  test_page_detail_waveform.py  test_page_list.py  test_page_search.py  test_page_settings.py  test_pipeline.py  test_recording_deletion.py  test_retranscribe_and_search.py  test_retranscribe_js.js  test_search_highlighting_integration.py  test_search_integration.py  test_settings_js.js  test_transcriber.py  test_upload_page.py  (+1 more)
