[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "audio-recordings-manager"
version = "0.1.0"
description = "Self-hosted audio recording manager with automatic transcription"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi",
    "watchdog",
    "faster-whisper",
    "pytest",
    "pytest-asyncio",
    "sqlalchemy",
    "PyYAML",
]

[tool.hatch.build.targets.wheel]
packages = ["src/audio_manager"]
